--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,29 +15,53 @@
 
     <Button
         android:id="@+id/categoryButton"
-        android:layout_width="wrap_content"
+        android:layout_width="225dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="139dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="159dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="169dp"
+        android:layout_marginEnd="93dp"
         android:onClick="categoryClicked"
         android:text="Category" />
 
     <Button
-        android:id="@+id/categoryButton2"
-        android:layout_width="wrap_content"
+        android:id="@+id/productButton"
+        android:layout_width="226dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/categoryButton"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="146dp"
-        android:layout_marginTop="45dp"
-        android:layout_marginEnd="151dp"
-        android:onClick="categoryClicked"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="93dp"
+        android:onClick="productClicked"
         android:text="Product" />
+
+    <Button
+        android:id="@+id/POSButton"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/categoryButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="94dp"
+        android:text="POS" />
+
+    <Button
+        android:id="@+id/SampleButton"
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/categoryButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="256dp"
+        android:layout_marginEnd="94dp"
+        android:text="Sample" />
 
 
 </RelativeLayout>
