--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -13,7 +13,7 @@
         android:layout_height="22dp"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="135dp"
-        android:text="List of categories"
+        android:text="List of Products"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,12 +33,14 @@
 
     <Button
         android:id="@+id/btnAddProduct"
-        android:layout_width="wrap_content"
+        android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/recyclerView"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="-56dp"
+        android:layout_marginStart="89dp"
+        android:layout_marginEnd="89dp"
+        android:layout_marginBottom="-55dp"
         android:text="Add Product"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
