--- a/app/src/main/res/layout/activity_fruit.xml
+++ b/app/src/main/res/layout/activity_fruit.xml
@@ -31,7 +31,7 @@
 
     <Button
         android:id="@+id/btnAddFruit"
-        android:layout_width="wrap_content"
+        android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:text="Add Fruit"
         app:layout_constraintBottom_toBottomOf="parent"
